Rerun notebooks with slight changes

--- a/01_invariant_mass_fits.ipynb
+++ b/01_invariant_mass_fits.ipynb
@@ -1559,7 +1559,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MC events predicted in 42.5062 seconds.\n"
+      "MC events predicted in 3.8979 seconds.\n"
      ]
     }
    ],
@@ -1580,7 +1580,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data events predicted in 3.5989 minutes.\n"
+      "Data events predicted in 4.4546 minutes.\n"
      ]
     }
    ],
@@ -2836,6 +2836,45 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "874341f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pdg_round(value, error) :\n",
+    "    \"Given a value and an error, round and format them according to the PDG rules for significant digits\"\n",
+    "    def three_digits(value) :\n",
+    "        \"extract the three most significant digits and return them as an int\"\n",
+    "        return int((\"%.2e\"%float(error)).split('e')[0].replace('.','').replace('+','').replace('-',''))\n",
+    "    def n_significant_digits(three_digits) :\n",
+    "        assert three_digits<1000,\"three digits (%d) cannot be larger than 10^3\"%three_digits\n",
+    "        if three_digits<101 : return 2 # not sure\n",
+    "        elif three_digits<356 : return 2\n",
+    "        elif three_digits<950 : return 1\n",
+    "        else : return 2\n",
+    "    def frexp10(value) :\n",
+    "        \"convert to mantissa+exp representation (same as frex, but in base 10)\"\n",
+    "        valueStr = (\"%e\"%float(value)).split('e')\n",
+    "        return float(valueStr[0]), int(valueStr[1])\n",
+    "    def n_digits_value(expVal, expErr, nDigitsErr) :\n",
+    "        \"compute the number of digits we want for the value, assuming we keep nDigitsErr for the error\"\n",
+    "        return expVal-expErr+nDigitsErr\n",
+    "    def format_value(value, exponent, nDigits, extraRound=0) :\n",
+    "        \"Format the value; extraRound is meant for the special case of three_digits>950\"\n",
+    "        roundAt = nDigits-1-exponent - extraRound\n",
+    "        nDec = roundAt if exponent<nDigits else 0\n",
+    "        nDec = max([nDec, 0])\n",
+    "        return ('%.'+str(nDec)+'f')%round(value,roundAt)\n",
+    "    tD = three_digits(error)\n",
+    "    nD = n_significant_digits(tD)\n",
+    "    expVal, expErr = frexp10(value)[1], frexp10(error)[1]\n",
+    "    extraRound = 1 if tD>=950 else 0\n",
+    "    return (format_value(value, expVal, n_digits_value(expVal, expErr, nD), extraRound),\n",
+    "            format_value(error,expErr, nD, extraRound))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "1746163e",
    "metadata": {},
    "outputs": [
@@ -2843,13 +2882,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S :\t\t 365936.7125378194 \t+-\t 3120.466259943374\n",
-      "mu :\t\t 5620.200273003231 \t+-\t 0.5961698984104609\n",
-      "sigma :\t\t 36.939571555355045 \t+-\t 1.022595303037209\n",
-      "alpha_1 :\t\t 0.9914410755546194 \t+-\t 0.03788455817779831\n",
-      "n_1 :\t\t 2.4365846750279276 \t+-\t 0.12326002627577767\n",
-      "alpha_2 :\t\t 1.0077780120754054 \t+-\t 0.039231525607972585\n",
-      "n_2 :\t\t 2.6895716147892714 \t+-\t 0.15177716071433878\n"
+      "S :\t\t 365900 \t+-\t 3100\n",
+      "mu :\t\t 5620.2 \t+-\t 0.6\n",
+      "sigma :\t\t 36.9 \t+-\t 1.0\n",
+      "alpha_1 :\t\t 0.99 \t+-\t 0.04\n",
+      "n_1 :\t\t 2.44 \t+-\t 0.12\n",
+      "alpha_2 :\t\t 1.01 \t+-\t 0.04\n",
+      "n_2 :\t\t 2.69 \t+-\t 0.15\n"
      ]
     }
    ],
@@ -2857,12 +2896,13 @@
     "MC_param_names = sig_func['param_names']\n",
     "MC_param_error = np.sqrt(np.diag(MC_param_covmatrix))\n",
     "for name, best, error in zip(MC_param_names, MC_param_best, MC_param_error):\n",
-    "    print(name, \":\\t\\t\", best, \"\\t+-\\t\", error)"
+    "    best_rounded, error_rounded = pdg_round(best, error)\n",
+    "    print(name, \":\\t\\t\", best_rounded, \"\\t+-\\t\", error_rounded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "id": "c6aa11ab",
    "metadata": {},
    "outputs": [
@@ -2954,7 +2994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "id": "2da9b05e",
    "metadata": {},
    "outputs": [],
@@ -2980,7 +3020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "id": "0d461a5f",
    "metadata": {},
    "outputs": [],
@@ -2990,7 +3030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "id": "d1e0edc3",
    "metadata": {},
    "outputs": [
@@ -3067,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "id": "4126b8e1",
    "metadata": {},
    "outputs": [],
@@ -3091,7 +3131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "id": "8c7b804c",
    "metadata": {},
    "outputs": [],
@@ -3111,7 +3151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "id": "be805a9f",
    "metadata": {},
    "outputs": [
@@ -3119,10 +3159,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S :\t\t 65629.71064188796 \t+-\t 1833.2471494196636\n",
-      "sigma :\t\t 41.5827787051353 \t+-\t 1.5597427189914965\n",
-      "C :\t\t 244529.92086158658 \t+-\t 37440.55386723005\n",
-      "a :\t\t 0.0013360831593536516 \t+-\t 2.8687211021633535e-05\n"
+      "S :\t\t 65600 \t+-\t 1800\n",
+      "sigma :\t\t 41.6 \t+-\t 1.6\n",
+      "C :\t\t 240000 \t+-\t 40000\n",
+      "a :\t\t 0.001336 \t+-\t 0.000029\n"
      ]
     }
    ],
@@ -3130,12 +3170,13 @@
     "data_param_names = sig_func_constrained['param_names'] + bkg_func['param_names']\n",
     "data_param_error = np.sqrt(np.diag(data_param_covmatrix))\n",
     "for name, best, error in zip(data_param_names, data_param_best, data_param_error):\n",
-    "    print(name, \":\\t\\t\", best, \"\\t+-\\t\", error)"
+    "    best_rounded, error_rounded = pdg_round(best, error)\n",
+    "    print(name, \":\\t\\t\", best_rounded, \"\\t+-\\t\", error_rounded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "id": "c923469b",
    "metadata": {},
    "outputs": [
@@ -3235,7 +3276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "id": "09f13517",
    "metadata": {},
    "outputs": [
@@ -3258,7 +3299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "id": "1f193108",
    "metadata": {},
    "outputs": [
@@ -3331,7 +3372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "id": "426eccaa",
    "metadata": {},
    "outputs": [
