Implement working 2D fit and smearing in pseudoexperiments

--- a/06_proton_angle_resolutions.ipynb
+++ b/06_proton_angle_resolutions.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "## Self explanatory\n",
-    "save_plots = True\n",
+    "save_plots = False\n",
     "\n",
     "## Toggle plot titles (off for thesis and papers, generally speaking)\n",
     "show_titles = False\n",
@@ -4180,11 +4180,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
+   "id": "42cc92b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25285711506960173"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(df_res_theta['resolution_mean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "4c86aa16",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.083175034316114"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(df_res_phi['resolution_mean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "88689a6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09707872006615005"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(df_res_theta_nocross['resolution_mean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "5f530030",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33221634983803044"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(df_res_phi_nocross['resolution_mean'])"
+   ]
   }
  ],
  "metadata": {
