Rerun with color

--- a/05_proton_angular_distributions.ipynb
+++ b/05_proton_angular_distributions.ipynb
@@ -2471,6 +2471,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -2518,6 +2519,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -2791,6 +2793,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -2838,6 +2841,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight')\n",
     "\n",
     "plt.show()"
    ]
