Run convolution with sigma approaching zero

--- a/99_convolution_root.ipynb
+++ b/99_convolution_root.ipynb
@@ -435,7 +435,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "theta_resolution = 0.097"
+    "theta_resolution = 0.097\n",
+    "#theta_resolution = 1e-3"
    ]
   },
   {
@@ -564,13 +565,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "114.23363057523966\n",
+      "112.9331881813705\n",
       "[#1] INFO:Eval -- RooRealVar::setRange(ctheta) new range named 'refrange_fft_pdf_theta_conv' created with bounds [-1,1]\n",
       "[#1] INFO:NumericIntegration -- RooRealIntegral::init(pdf_Int[ctheta]) using numeric integrator RooIntegrator1D to calculate Int(ctheta)\n",
-      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_conv) creating new cache 0x97eb6f0 with pdf pdf_CONV_gaussian_theta_CACHE_Obs[ctheta]_NORM_ctheta_phi for nset (ctheta,phi) with code 0\n",
+      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_conv) creating new cache 0x89923f0 with pdf pdf_CONV_gaussian_theta_CACHE_Obs[ctheta]_NORM_ctheta_phi for nset (ctheta,phi) with code 0\n",
       "[#1] INFO:NumericIntegration -- RooRealIntegral::init(pdf_CONV_gaussian_theta_CACHE_Obs[ctheta]_NORM_ctheta_phi_Int[ctheta,phi]) using numeric integrator RooIntegrator1D to calculate Int(phi)\n",
       "[#1] INFO:NumericIntegration -- RooRealIntegral::init(pdf_Int[ctheta]) using numeric integrator RooIntegrator1D to calculate Int(ctheta)\n",
-      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_conv) creating new cache 0x9a32b30 with pdf pdf_CONV_gaussian_theta_CACHE_Obs[ctheta]_NORM_ctheta_phi for nset (ctheta,phi) with code 0\n",
+      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_conv) creating new cache 0x9074230 with pdf pdf_CONV_gaussian_theta_CACHE_Obs[ctheta]_NORM_ctheta_phi for nset (ctheta,phi) with code 0\n",
       "[#1] INFO:NumericIntegration -- RooRealIntegral::init(pdf_CONV_gaussian_theta_CACHE_Obs[ctheta]_NORM_ctheta_phi_Int[ctheta,phi]) using numeric integrator RooIntegrator1D to calculate Int(phi)\n"
      ]
     }
@@ -814,7 +815,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phi_resolution = 0.332"
+    "phi_resolution = 0.332\n",
+    "#phi_resolution = 1e-3"
    ]
   },
   {
@@ -878,13 +880,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3361.037749812007\n",
+      "3378.26558669284\n",
       "[#1] INFO:Eval -- RooRealVar::setRange(phi) new range named 'refrange_fft_pdf_theta_phi_conv' created with bounds [-3.14159,3.14159]\n",
-      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_conv) creating new cache 0x9fddd00 with pdf pdf_CONV_gaussian_theta_CACHE_Obs[phi,ctheta]_NORM_phi for nset (phi) with code 0\n",
-      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_phi_conv) creating new cache 0x9fc9a00 with pdf pdf_theta_conv_CONV_gaussian_phi_CACHE_Obs[phi]_NORM_ctheta_phi for nset (ctheta,phi) with code 0\n",
+      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_conv) creating new cache 0x9621360 with pdf pdf_CONV_gaussian_theta_CACHE_Obs[phi,ctheta]_NORM_phi for nset (phi) with code 0\n",
+      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_phi_conv) creating new cache 0x960d0a0 with pdf pdf_theta_conv_CONV_gaussian_phi_CACHE_Obs[phi]_NORM_ctheta_phi for nset (ctheta,phi) with code 0\n",
       "[#1] INFO:NumericIntegration -- RooRealIntegral::init(pdf_theta_conv_CONV_gaussian_phi_CACHE_Obs[phi]_NORM_ctheta_phi_Int[ctheta,phi]) using numeric integrator RooIntegrator1D to calculate Int(ctheta)\n",
-      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_conv) creating new cache 0xcf015b0 with pdf pdf_CONV_gaussian_theta_CACHE_Obs[phi,ctheta]_NORM_phi for nset (phi) with code 0 from preexisting content.\n",
-      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_phi_conv) creating new cache 0xceed760 with pdf pdf_theta_conv_CONV_gaussian_phi_CACHE_Obs[phi]_NORM_ctheta_phi for nset (ctheta,phi) with code 0\n",
+      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_conv) creating new cache 0xc543070 with pdf pdf_CONV_gaussian_theta_CACHE_Obs[phi,ctheta]_NORM_phi for nset (phi) with code 0 from preexisting content.\n",
+      "[#1] INFO:Caching -- RooAbsCachedPdf::getCache(pdf_theta_phi_conv) creating new cache 0xc52f240 with pdf pdf_theta_conv_CONV_gaussian_phi_CACHE_Obs[phi]_NORM_ctheta_phi for nset (ctheta,phi) with code 0\n",
       "[#1] INFO:NumericIntegration -- RooRealIntegral::init(pdf_theta_conv_CONV_gaussian_phi_CACHE_Obs[phi]_NORM_ctheta_phi_Int[ctheta,phi]) using numeric integrator RooIntegrator1D to calculate Int(ctheta)\n"
      ]
     }
@@ -1130,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "0c029c04",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "90a93d3b",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "c439e2c6",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "de074cc8",
    "metadata": {},
    "outputs": [],
