Move unfinished work to dev folder

--- a/11_smearing_comparison.ipynb
+++ b/11_smearing_comparison.ipynb
@@ -514,8 +514,8 @@
     "plt.ylim(5000,35000)\n",
     "\n",
     "if save_plots:\n",
-    "    for extension in ['.pdf', '.png']:\n",
-    "        plt.savefig(plot_directory + filename + extension, bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + filename + '.pdf', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + filename + '.png', bbox_inches = 'tight', dpi=150)\n",
     "\n",
     "plt.show()"
    ]
@@ -843,8 +843,8 @@
     "plt.ylim(12000,35000)\n",
     "\n",
     "if save_plots:\n",
-    "    for extension in ['.pdf', '.png']:\n",
-    "        plt.savefig(plot_directory + filename + extension, bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + filename + '.pdf', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + filename + '.png', bbox_inches = 'tight', dpi=150)\n",
     "\n",
     "plt.show()"
    ]
