Rerun plots for presentation

--- a/05_proton_angular_distributions.ipynb
+++ b/05_proton_angular_distributions.ipynb
@@ -2485,7 +2485,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
-    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight', dpi=150)\n",
     "\n",
     "plt.show()"
    ]
@@ -2533,7 +2533,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
-    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight', dpi=150)\n",
     "\n",
     "plt.show()"
    ]
@@ -2599,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "id": "5a92e5d4",
    "metadata": {},
    "outputs": [
@@ -2640,6 +2640,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight', dpi=150)\n",
     "\n",
     "plt.show()"
    ]
@@ -2807,7 +2808,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
-    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight', dpi=150)\n",
     "\n",
     "plt.show()"
    ]
@@ -2855,7 +2856,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
-    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight', dpi=150)\n",
     "\n",
     "plt.show()"
    ]
@@ -2962,6 +2963,7 @@
     "    \n",
     "if save_plots:\n",
     "    plt.savefig(plot_directory + file_name + '.pdf', bbox_inches = 'tight')\n",
+    "    plt.savefig(plot_directory + file_name + '.png', bbox_inches = 'tight', dpi=150)\n",
     "\n",
     "plt.show()"
    ]
